crates/swc_ecma_parser/tests/test262-error-references/fail/1fc78fd0e00f4e92.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/1fc78fd0e00f4e92.js:1:10
  |
1 | function default() {}
  |          ^^^^^^^

